2022-02-27  Antoine Quint  <graouts@webkit.org>

        [svg] stop-opacity should be clamped to the [0,1] range
        https://bugs.webkit.org/show_bug.cgi?id=237255

        Reviewed by Dean Jackson.

        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-002-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-002-expected.txt:

2022-02-27  Antoine Quint  <graouts@webkit.org>

        [svg] fill-opacity should be clamped to the [0,1] range
        https://bugs.webkit.org/show_bug.cgi?id=237252

        Reviewed by Dean Jackson.

        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-001-expected.txt:

2022-02-27  Tim Nguyen  <ntim@apple.com>

        Force -webkit-user-modify used style to readonly for inert nodes
        https://bugs.webkit.org/show_bug.cgi?id=237244

        Reviewed by Darin Adler.

        This disallows programmatic edition of contenteditable inert nodes. Edition via user-input is
        already prevented by forcing pointer-events style to none.

        We create a seperate effectiveUserModify, similar to effectiveUserSelect/effectivePointerEvents,
        to avoid changing the computed style.

        This behaviour also matches Blink & Gecko.

        * web-platform-tests/inert/inert-and-contenteditable.tentative-expected.txt:

2022-02-27  Antoine Quint  <graouts@webkit.org>

        [css-animations] implicit keyframes should be inserted after explicit keyframes with the same offset
        https://bugs.webkit.org/show_bug.cgi?id=237246

        Reviewed by Dean Jackson.

        Update WPT test added in bug 236838 to match the spec following discussion with Brian Birtles in
        https://github.com/web-platform-tests/wpt/pull/32903.
